SDK/fixtures/invalid/invalid-pause.tps
## [Broken|focused]

### [Body]

[pause:soon]
